# erract

./: .gitignore  AGENTS.md  Cargo.toml  README.md
.github/workflows/: ci.yml  nightly.yml
benches/: README.md  arena_bench.rs  benchmark.rs
examples/: basic.rs
src/: context.rs  convert.rs  db.rs  error.rs  extract.rs  http.rs  kind.rs  lib.rs  prelude.rs  status.rs  storage.rs
src/arena/: mod.rs
