[package]
name = "erract"
version = "0.1.1"
edition = "2024"
description = "Structured, context-aware error handling"
license = "MIT"
repository = "https://github.com/ab22593k/erract"
keywords = ["error", "error-handling", "context", "retry"]
categories = ["development-tools::testing"]

[dependencies]
exn = "0.2"
smallvec = "1.13"
serde = { version = "1.0", optional = true, features = ["derive"] }

[dev-dependencies]
proptest = "1.4"
criterion = "0.5"
anyhow = "1.0"

[features]
default = []
http = []
db = []
storage = []
serde = ["dep:serde", "smallvec/serde"]

[[bench]]
name = "benchmark"
harness = false

[lib]
path = "src/lib.rs"

[package.metadata.docs.rs]
all-features = true
